# mobile_robot

./: CMakeLists.txt  motor_input.txt  package.xml
include/mobile_robot/: motor_algorithm.h
src/: motor_algorithm.cpp  test.cpp
